--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "twixorAgentApp",
-  "version": "0.0.1",
+  "name": "agenttwixorapp",
+  "version": "0.0.12",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -37,10 +37,18 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-react-native-web": "^0.18.12",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.3",
-    "react-test-renderer": "18.1.0"
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "18.1.0",
+    "typescript": "^4.9.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "jest": {
     "preset": "react-native"
